force-app/main/default/objects/Jet__c/Jet__c.object-meta.xml
<CustomObject>
    <description>A private airplane</description>
    <label>Jet</label>
    <nameField>
        <label>Model Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Jets</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>