force-app/main/default/objects/Jet__c/fields/Airport__c.field-meta.xml
<CustomField>
    <fullName>Airport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Airport where the Jet is currently located</description>
    <label>Current Airport Location</label>
    <referenceTo>Airport__c</referenceTo>
    <relationshipLabel>Jets</relationshipLabel>
    <relationshipName>Jets</relationshipName>
    <type>Lookup</type>
</CustomField>