force-app/main/default/objects/Jet__c/fields/Current_Milage__c.field-meta.xml
<CustomField>
    <fullName>Current_Milage__c</fullName>
    <label>Current Milage</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>