force-app/main/default/objects/Jet__c/fields/Max_Seats__c.field-meta.xml
<CustomField>
    <fullName>Max_Seats__c</fullName>
    <description>Maximum number of passenger seats in the plane</description>
    <label>Max Seats</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>