force-app/main/default/objects/Jet__c/fields/Miles_left_before_inspection__c.field-meta.xml
<CustomField>
    <fullName>Miles_left_before_inspection__c</fullName>
    <description>Number of miles that is left for jet to be send for inspection.</description>
    <formula>1000 - MOD(Current_Milage__c,1000)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Miles left before inspection</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>