force-app/main/default/objects/Jet__c/fields/Min_Required_Pilot_Hours__c.field-meta.xml
<CustomField>
    <fullName>Min_Required_Pilot_Hours__c</fullName>
    <description>Minimum amount flied hors needed for pilot to fly on this jet</description>
    <label>Min Required Pilot Hours</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>