force-app/main/default/objects/Jet__c/fields/Next_Inspection__c.field-meta.xml
<CustomField>
    <fullName>Next_Inspection__c</fullName>
    <description>The date of next ispection</description>
    <label>Next Inspection</label>
    <type>Date</type>
</CustomField>