force-app/main/default/objects/Jet__c/fields/Total_Flied_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Flied_Hours__c</fullName>
    <label>Total Flied Hours</label>
    <summarizedField>Jet_Booking__c.Hours_spent__c</summarizedField>
    <summaryFilterItems>
        <field>Jet_Booking__c.Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </summaryFilterItems>
    <summaryForeignKey>Jet_Booking__c.Jet__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>