force-app/main/default/objects/Jet__c/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <description>Weight of the Jet in Kilogramms</description>
    <label>Weight (Kg)</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>