force-app/main/default/objects/Jet__c/recordTypes/Commercial_Jet.recordType-meta.xml
<RecordType>
    <fullName>Commercial_Jet</fullName>
    <active>true</active>
    <label>Commercial Jet</label>
</RecordType>